[package]
name = "b64enc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
tokio = { version = "1.25", features = ["rt", "fs", "macros", "rt-multi-thread", "sync", "io-util", "io-std"] }
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0.69"
